--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ function toggleDescription(id) {
     <h2 class="text-5xl font-bold text-white mb-4">Lokesh Lankalapalli</h2>
     <p class="text-lg text-blue-300">MS IT @ ASU | CEHv11 | Security+ | eJPTv2</p>
     <a class="mt-6 inline-block px-6 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-400 transition" href="#contact">Let's Connect</a>
-    <a class="mt-4 ml-4 inline-block px-4 py-2 border border-blue-400 text-blue-400 rounded hover:bg-blue-500 hover:text-white transition" href="Lokesh_Lankalapalli_Resume.pdf" target="_blank">Download Resume</a>
+    <a class="mt-4 ml-4 inline-block px-4 py-2 border border-blue-400 text-blue-400 rounded hover:bg-blue-500 hover:text-white transition" href="https://loke173212.github.io/portfolio/Lokesh_Lankalapalli_Resume.pdf" target="_blank">Download Resume</a>
    </div>
   </header>
   
