--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ function toggleDescription(id) {
     </div>
     <div class="card">
      <h3 class="text-xl font-bold text-white">Jawaharlal Nehru Technological University</h3>
-     <p class="text-sm text-gray-300">Bachelor of Technology in Computer Science and Engineering</p>
-     <p class="text-sm text-gray-400">Graduated: 2022</p>
+     <p class="text-sm text-gray-300">Bachelor of Technology in Electronics and Communication Engineering</p>
+     <p class="text-sm text-gray-400">Graduated: 2023</p>
     </div>
    </div>
   </section>
