--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ function toggleDescription(id) {
    <p class="text-sm text-gray-300 mt-2">Developed WebRecon, a Python-based tool for intelligent web reconnaissance and OSINT automation. It crawls web pages (including IP-based targets), extracts custom wordlists, scrapes live emails, and smartly guesses potential email addresses using context from page content. Outputs are saved in structured folders for efficient analysis.</p>
    <ul class="list-disc pl-5 mt-2 text-gray-300 text-sm space-y-1">
     <li>Extracts and formats wordlists from live page content.</li>
-    <li>Performs live email scraping and smart guessing using NLP-based heuristics.</li>
+    <li>Performs live email scraping and smart guessing.</li>
     <li>Supports scanning of domains, IPs, and local targets with output folder customization.</li>
     <li>Designed CLI interface with flexible options for limit, depth, and output naming.</li>
    </ul>
