--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         </section>
 
         <section id="certifications" class="py-24 reveal">
-            <h2 class="section-heading text-2xl mb-8">Certifications</h2>
+            <h2 class="section-heading text-2xl mb-8">05. Certifications</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Card 1: CEHv11 -->
                 <div class="card p-6 flex flex-col justify-between">
@@ -483,7 +483,7 @@
         </section>
 
         <section id="projects" class="py-24 reveal">
-            <h2 class="section-heading text-2xl mb-8">05. Projects</h2>
+            <h2 class="section-heading text-2xl mb-8">06. Projects</h2>
             <div class="space-y-12">
                 <!-- Project 1 -->
                 <div class="card p-6">
