--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <section id="hero" class="min-h-[80vh] flex flex-col justify-center py-20">
             <p class="text-[var(--green)] font-mono mb-4">Welcome to my terminal.</p>
             <h1 class="text-4xl sm:text-6xl md:text-7xl font-bold text-[var(--lightest-slate)]">Lokesh Lankalapalli.</h1>
-            <h2 class="text-3xl sm:text-5xl md:text-6xl font-bold text-[var(--slate)] mt-2">I build & secure things for the web.</h2>
+            <h2 class="text-3xl sm:text-5xl md:text-6xl font-bold text-[var(--slate)] mt-2">I build & secure things!!</h2>
             <div id="terminal" class="mt-8" onclick="document.getElementById('command-input').focus()">
                 <div id="terminal-output"></div>
                 <div class="prompt">
