--- a/index.html
+++ b/index.html
@@ -341,6 +341,12 @@
                                 <li>TEM 598: Technology Innovation Lab (Collaborated with Honeywell)</li>
                             </ul>
                         </div>
+                        <div>
+                            <h4 class="font-bold text-[var(--light-slate)]">Fall 2025 Courses:</h4>
+                            <ul class="list-disc list-inside pl-2">
+                                <li>IFT 598: Advanced computer networks</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -355,7 +361,7 @@
             <h2 class="section-heading text-2xl mb-12">03. Experience</h2>
             <div class="space-y-12">
                 <div class="timeline-item">
-                    <h3 class="text-xl font-bold text-[var(--lightest-slate)]">Application Security Developer</h3>
+                    <h3 class="text-xl font-bold text-[var(--lightest-slate)]">Software Security Developer</h3>
                     <p class="text-[var(--green)] mb-2">MaxGPT – AI-Powered Educational Chatbot</p>
                     <p class="text-sm text-[var(--slate)] font-mono mb-4">Jan 2025 – Present | Arizona State University | Python · JavaScript · CAS · MySQL · OpenAI GPT-4</p>
                     <ul class="list-disc list-inside text-[var(--slate)] space-y-2 text-sm pl-2">
