--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 <div class="timeline-item">
                     <h3 class="text-xl font-bold text-[var(--lightest-slate)]">Software Security Developer</h3>
                     <p class="text-[var(--green)] mb-2">MaxGPT – AI-Powered Educational Chatbot</p>
-                    <p class="text-sm text-[var(--slate)] font-mono mb-4">Jan 2025 – Present | Arizona State University | Python · JavaScript · CAS · MySQL · OpenAI GPT-4</p>
+                    <p class="text-sm text-[var(--slate)] font-mono mb-4">Jan 2025 – Jan 2026 | Arizona State University | Python · JavaScript · CAS · MySQL · OpenAI GPT-4</p>
                     <ul class="list-disc list-inside text-[var(--slate)] space-y-2 text-sm pl-2">
                         <li>Designed and implemented custom session management logic from scratch to maintain user state securely across the frontend and backend.</li>
                         <li>Integrated ASU’s Central Authentication Service (CAS) for single sign-on, enabling seamless and secure login via ASURITE ID.</li>
